--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main class="center">
       <div class="container">
-        
-        <img  class="hero" src="illustration-hero.svg" alt="illustration-hero.svg"/>
-        
+        <img
+          class="hero"
+          src="illustration-hero.svg"
+          alt="illustration-hero.svg"
+        />
+
         <div class="txt-body">
           <h1>Order Summary</h1>
 
@@ -21,20 +30,16 @@
           </p>
 
           <div class="plan">
+            <div>
+              <img class="icon" src="icon-music.svg" alt="icon-music.svg" />
 
-           <div>
-
-            <img class="icon" src="icon-music.svg" alt="icon-music.svg">
-
-            <div class="plan-info">
-             <p> <b>Annual Plan</b> </p>
-              <span>$59.99/year</span>
+              <div class="plan-info">
+                <p><b>Annual Plan</b></p>
+                <span>$59.99/year</span>
+              </div>
             </div>
 
-           </div>
-
-           <a href="#" class="plan">Change</a>
-
+            <a href="#" class="plan">Change</a>
           </div>
 
           <a href="#" class="payment">Proceed to Payment</a>
